2001-12-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gsdoc-0_6_7.dtd: Fix protocol error reported by Adam

2001-12-15  Fred Kiefer <FredKiefer@gmx.de>

	* Tools/pl2link.m
	Better handling of MIME types.

2001-12-15  Richard Frith-Macdonald <rfm@gnu.org>

	Many minor cleanups and bugfixes for autogsdoc.  Alpha-test support
	for building base library documentation using autogsdoc ... lots of
	work remains to be done to improve the html output from autogsdoc
	and to add autogsdoc comments to the base library source code.
	* Tools/AGSIndex.h: improve merge control
	* Tools/AGSIndex.m: ditto
	* Tools/AGSHtml.h: new methods for cleaner indexing.
	* Tools/AGSHtml.m: ditto
	* Tools/AGSParser.m: minor bugfixes.
	  Tools/GNUmakefile: Build autogsdoc documentation using autogsdoc.
	* Tools/autogsdoc.m: Fix minor dependency error.  Fix for indexing
	where a version of the project being built is already installed.
	* Tools/gsdoc-0_6_7.dtd: Fix ivar support
	* Source/GSFFCallInvocation.m: minor debug output improvement.
	* Source/GNUmakefile: add basic instructions to build (but not install)
	documentation using autogsdoc.  Don't want to install yet, as this is
	very much alpha-test stuff.

2001-12-13  Adam Fedor  <fedor@gnu.org>

	* Tools/pl2link.m: New file (from FredKiefer@gmx.de).

2001-12-12  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSDebug.h: Include NSDebugLog functions
	when GSDIAGNOSE is defined.

2001-12-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Remove GSHTPPropertyBodyKey ... make
	the ([writeData:]) method do nothing until the page is reloaded,
	so its behavior is consistent with ([writeProperty:forKey:]) and
	can be used in conjunction with background loading (ie all I/O
	is done during the load).
	* Source/NSURL.m: load resource data after setting it to force I/O

2001-12-11  Manuel Guesdon <mguesdon@orange-concept.com>

	* Source/NSString.m: corrected  bug in +stringByTrimmingSpaces 